# I2SS

./: CMakeLists.txt  i2ss.cpp  i2ss_utils.hpp  params.doc  point_seg.h  readme.txt  scale.cpp
Data/: aircraft.vtp  bld_crop.vtp  circular1.vtp  circular2.vtp  circular3.pcd  circular3.vtp  nonstan_bld1.vtp  parking_bld.pcd  parking_bld.vtp  roofholes.vtp  towers.vtp
Documentation/: i2ss_tutorial.doc
Results/: README
Results/aircraft_results/: ransac_result_cluster0.pcd  ransac_result_cluster1.pcd
Results/bld_crop_results/: bld_crop.pcd  ransac_result_segment2.pcd
Results/circular1_results/: circular1.pcd
Results/circular2_results/: ransac_result_segment0.pcd  ransac_result_segment1.pcd
Results/circular3_results/: mlesac_result_cluster5.pcd  ransac_result_cluster3.pcd  ransac_result_segment0.pcd  ransac_result_segment1.pcd
Results/nonstan_bld1_results/: ransac_result_cluster4.pcd  ransac_result_cluster7.pcd  ransac_result_cluster8.pcd  ransac_result_segment0.pcd  ransac_result_segment1.pcd
Results/parking_bld_normal_results/: ransac_result_cluster1.pcd  ransac_result_segment0.pcd  ransac_result_segment2.pcd  ransac_result_segment3.pcd  ransac_result_segment4.pcd
Results/roofholes_results/: ransac_result_segment1.pcd  roofholes.pcd
Results/towers_results/: mlesac_result_cluster0.pcd  mlesac_result_cluster1.pcd  mlesac_result_cluster2.pcd  mlesac_result_cluster4.pcd  mlesac_result_cluster6.pcd  ransac_result_cluster5.pcd  ransac_result_segment0.pcd  ransac_result_segment1.pcd  towers_README
results_old/: README
(+492 files in other folders)
